// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search action handler Delete resources should delete a resource 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "argv": Array [
          "deleteResource",
          "fake-name",
          "fake-namespace",
          "fake-kind",
          "fake-cluster",
          "fake-selfLink",
        ],
        "command": "deleteResource fake-name fake-namespace fake-kind fake-cluster fake-selfLink",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`Search action handler Delete saved searches should delete a saved search 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "argv": Array [
          "deleteSavedSearch",
          "All Fake Pods",
        ],
        "command": "deleteSavedSearch All Fake Pods",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`Search action handler Notifications should return a error notification 1`] = `
<div
  class="bx--toast-notification-content"
>
  <div
    class="notification"
  >
    <div
      class="bx--toast-notification bx--toast-notification--error"
      kind="error"
      role="alert"
      timeout="5000"
    >
      <svg
        aria-hidden="true"
        class="bx--toast-notification__icon"
        focusable="false"
        height="20"
        preserveAspectRatio="xMidYMid meet"
        style="will-change: transform;"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 1c-5 0-9 4-9 9s4 9 9 9 9-4 9-9-4-9-9-9zm3.5 13.5l-8-8 1-1 8 8-1 1z"
        />
        <path
          d="M13.5 14.5l-8-8 1-1 8 8-1 1z"
          data-icon-path="inner-path"
          opacity="0"
        />
        <title>
          closes notification
        </title>
      </svg>
      <div
        class="bx--toast-notification__details"
      >
        <h3
          class="bx--toast-notification__title"
        >
          Failed to delete saved search All Fake Pods
        </h3>
        <div
          class="bx--toast-notification__subtitle"
        />
        <div
          class="bx--toast-notification__caption"
        >
          9:36:20 AM
        </div>
      </div>
      <button
        aria-label="closes notification"
        class="bx--toast-notification__close-button"
        title="closes notification"
        type="button"
      >
        <svg
          aria-label="close notification"
          class="bx--toast-notification__close-icon"
          focusable="false"
          height="20"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          style="will-change: transform;"
          viewBox="0 0 32 32"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4l6.6 6.6L8 22.6 9.4 24l6.6-6.6 6.6 6.6 1.4-1.4-6.6-6.6L24 9.4z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Search action handler Notifications should return a success notification 1`] = `
<div
  class="bx--toast-notification-content"
>
  <div
    class="notification"
  >
    <div
      class="bx--toast-notification bx--toast-notification--success"
      kind="success"
      role="alert"
      timeout="5000"
    >
      <svg
        aria-hidden="true"
        class="bx--toast-notification__icon"
        focusable="false"
        height="20"
        preserveAspectRatio="xMidYMid meet"
        style="will-change: transform;"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 1c-4.9 0-9 4.1-9 9s4.1 9 9 9 9-4 9-9-4-9-9-9zM8.7 13.5l-3.2-3.2 1-1 2.2 2.2 4.8-4.8 1 1-5.8 5.8z"
        />
        <path
          d="M8.7 13.5l-3.2-3.2 1-1 2.2 2.2 4.8-4.8 1 1-5.8 5.8z"
          data-icon-path="inner-path"
          fill="none"
          opacity="0"
        />
        <title>
          closes notification
        </title>
      </svg>
      <div
        class="bx--toast-notification__details"
      >
        <h3
          class="bx--toast-notification__title"
        >
          Successfully deleted saved search All Fake Pods
        </h3>
        <div
          class="bx--toast-notification__subtitle"
        />
        <div
          class="bx--toast-notification__caption"
        >
          9:36:20 AM
        </div>
      </div>
      <button
        aria-label="closes notification"
        class="bx--toast-notification__close-button"
        title="closes notification"
        type="button"
      >
        <svg
          aria-label="close notification"
          class="bx--toast-notification__close-icon"
          focusable="false"
          height="20"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          style="will-change: transform;"
          viewBox="0 0 32 32"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4l6.6 6.6L8 22.6 9.4 24l6.6-6.6 6.6 6.6 1.4-1.4-6.6-6.6L24 9.4z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Search action handler Notifications should return a warning notification 1`] = `
<div
  class="bx--toast-notification-content"
>
  <div
    class="notification"
  >
    <div
      class="bx--toast-notification bx--toast-notification--warning"
      kind="warning"
      role="alert"
      timeout="5000"
    >
      <svg
        aria-hidden="true"
        class="bx--toast-notification__icon"
        focusable="false"
        height="20"
        preserveAspectRatio="xMidYMid meet"
        style="will-change: transform;"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 1c-5 0-9 4-9 9s4 9 9 9 9-4 9-9-4-9-9-9zm-.8 4h1.5v7H9.2V5zm.8 11c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1z"
        />
        <path
          d="M9.2 5h1.5v7H9.2V5zm.8 11c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1z"
          data-icon-path="inner-path"
          opacity="0"
        />
        <title>
          closes notification
        </title>
      </svg>
      <div
        class="bx--toast-notification__details"
      >
        <h3
          class="bx--toast-notification__title"
        >
          Warning - saved search All Fake Pods was not found! Check saved searches
        </h3>
        <div
          class="bx--toast-notification__subtitle"
        />
        <div
          class="bx--toast-notification__caption"
        >
          9:36:20 AM
        </div>
      </div>
      <button
        aria-label="closes notification"
        class="bx--toast-notification__close-button"
        title="closes notification"
        type="button"
      >
        <svg
          aria-label="close notification"
          class="bx--toast-notification__close-icon"
          focusable="false"
          height="20"
          preserveAspectRatio="xMidYMid meet"
          role="img"
          style="will-change: transform;"
          viewBox="0 0 32 32"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M24 9.4L22.6 8 16 14.6 9.4 8 8 9.4l6.6 6.6L8 22.6 9.4 24l6.6-6.6 6.6 6.6 1.4-1.4-6.6-6.6L24 9.4z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
